--- a/style.scss
+++ b/style.scss
@@ -24,7 +24,7 @@ body{
             font-family: 'Great Vibes', cursive;
             position: absolute;
             z-index: 2;
-            color: #efd671;
+            color: #f9e785;
             top: 71%;
             font-size: 250%;
             margin-left: 2%;
@@ -58,7 +58,7 @@ body{
             width: 15%;
         }
         h1{
-            color: #efd671;
+            color: #f9e785;
             font-size: 250%;
             font-family: 'utm_fire_houseregular';
             letter-spacing: 10px;
@@ -75,7 +75,7 @@ body{
             padding-left: 5%;
             input{
                 width: 40%;
-                color: #efd671;
+                color: #f9e785;
                 font-size: 250%;
                 font-family: 'Great Vibes', cursive;
                 text-align: center;
@@ -89,10 +89,10 @@ body{
             button{
                 height: 50%;
                 width: 5%;
-                border: #efd671 solid 2px;
+                border: #f9e785 solid 2px;
                 border-radius: 5px;
                 background-color: transparent;
-                color: #efd671;
+                color: #f9e785;
                 cursor: pointer;
             }
         }
