--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body section a, body section p {
   font-family: 'Great Vibes', cursive;
   position: absolute;
   z-index: 2;
-  color: #efd671;
+  color: #f9e785;
   top: 71%;
   font-size: 250%;
   margin-left: 2%;
@@ -77,7 +77,7 @@ body section #login-img {
 }
 
 body section h1 {
-  color: #efd671;
+  color: #f9e785;
   font-size: 250%;
   font-family: 'utm_fire_houseregular';
   letter-spacing: 10px;
@@ -104,7 +104,7 @@ body section div {
 
 body section div input {
   width: 40%;
-  color: #efd671;
+  color: #f9e785;
   font-size: 250%;
   font-family: 'Great Vibes', cursive;
   text-align: center;
@@ -119,10 +119,10 @@ body section div input {
 body section div button {
   height: 50%;
   width: 5%;
-  border: #efd671 solid 2px;
+  border: #f9e785 solid 2px;
   border-radius: 5px;
   background-color: transparent;
-  color: #efd671;
+  color: #f9e785;
   cursor: pointer;
 }
 
